fix: aligning all tabs css sctructure

--- a/styles/modules/iconsEffects.css
+++ b/styles/modules/iconsEffects.css
@@ -5,7 +5,7 @@
   font-size: 16px;
   font-weight: 400;
   width: 90%;
-  padding: 11px 12px;
+  padding: 9px 12px;
   border: none;
 }
 
