--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,10 +68,14 @@
 
 /* Second TAB */
 
+#content_2tab {
+  margin-top: -7px !important;
+}
+
 .btn-to-down {
     display: flex;
     align-items: flex-end;
-    height: 315px;
+    height: 322px;
 }
 
 .btn-to-down button {
@@ -80,11 +84,15 @@
 
 /* Third TAB */
 
+.div-heart{
+  margin-top: 7px !important;
+}
+
 .btn-more {
   margin-top: -10px !important;
 }
 
 .btn-finish {
-margin-top: 4px;
+margin-top: 21px;
 margin-bottom: 13px;
 }
